# flight-of-fancy

./: .gitignore  .gitmodules
cinema-pdf-parser/: .eslintrc.js  .gitignore  .prettierrc.json  LICENSE  PROJECT_INDEX.md  README.md  README_USAGE.md  cli.js  package-lock.json  package.json  test-parser.js  test-simple.js  tsconfig.json
cinema-pdf-parser/docs/: GRAND_ARCHITECTURE.md  JSON_OUTPUT_SCHEMA_DESIGN.md  PDF_PARSING_MODULE_DESIGN.md
cinema-pdf-parser/src/: index.ts
cinema-pdf-parser/src/cli/: CLI_INTERFACE_DESIGN.md
cinema-pdf-parser/src/constants/: CONSTANTS_MANAGEMENT_DESIGN.md  ConstantsManager.ts
cinema-pdf-parser/src/output/: OutputGenerator.ts
cinema-pdf-parser/src/parser/: CinemaParser.ts
cinema-pdf-parser/src/pdf/: SecurePDFParser.ts
cinema-pdf-parser/src/templates/revue/: RevueTemplate.ts  RevueTemplateExecutor.ts  TEMPLATE_SYSTEM_DESIGN.md
cinema-pdf-parser/src/types/: common.ts  constants.ts  index.ts  output.ts  pdf.ts  template.ts
cinema-pdf-parser/test/: TESTING_STRATEGY.md
finance-my-film/: .env  .env.example  .gitignore  README.md  config.json  film_finance_finder.py  notify.sh  pyproject.toml  requirements.txt  run_scan.sh
finance-my-film/.github/workflows/: ci.yml
finance-my-film/src/finance_film/: __init__.py  cli.py  config.py  models.py
finance-my-film/src/finance_film/db/: models.py  repository.py
finance-my-film/src/finance_film/notifiers/: base.py  file.py  manager.py  ntfy.py
finance-my-film/src/finance_film/pipeline/: dedup.py  runner.py  scoring.py
finance-my-film/src/finance_film/sources/: ai_provider.py  base.py  http_client.py  rss.py  web.py
finance-my-film/tests/: test_scoring_and_labels.py
finance-my-film/tests/fixtures/: scoring_golden.json
hibid/: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  debug-hibid.ts  index.ts  package.json
hibid/public/: app.js  index.html  styles.css
hibid/src/: amazon.ts  config.ts  db.ts  filter.ts  hibid.ts  notify.ts  product-resolver.ts  scanner.ts  scheduler.ts  scraper.ts  server.ts  types.ts
hibid/test/: filter.test.ts  product-resolver.test.ts  scanner.test.ts
