[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-film"
version = "2.0.0"
description = "Film funding opportunity finder for emerging filmmakers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Flight of Fancy" }]
keywords = ["film", "funding", "grants", "filmmaker"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

dependencies = [
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.0",
  "aiohttp>=3.9.0",
  "aiosqlite>=0.19.0",
  "feedparser>=6.0.10",
  "beautifulsoup4>=4.12.2",
  "lxml>=4.9.3",
  "rich>=13.7.0",
  "click>=8.1.7",
  "python-dateutil>=2.8.2",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0",
  "types-beautifulsoup4>=4.12.0",
  "types-python-dateutil>=2.8.19",
  "pre-commit>=3.6.0",
]

[project.scripts]
finance-film = "finance_film.cli:main"

[project.urls]
Homepage = "https://github.com/flight-of-fancy/finance-my-film"
Repository = "https://github.com/flight-of-fancy/finance-my-film"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_film"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "ARG",    # flake8-unused-arguments
  "SIM",    # flake8-simplify
  "TCH",    # flake8-type-checking
  "PTH",    # flake8-use-pathlib
  "ERA",    # eradicate
  "RUF",    # ruff-specific
  "PL",     # pylint
  "TRY",    # tryceratops
  "DTZ",    # flake8-datetimez
  "ASYNC",  # flake8-async
]
ignore = [
  "PLR0913",  # too many arguments
  "TRY003",   # long exception messages
  "ARG002",   # unused method argument (protocol implementations)
]

[tool.ruff.lint.isort]
known-first-party = ["finance_film"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["feedparser.*", "bs4.*", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/finance_film"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
